added levels,powerup,score and lives

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSIS250 GameEngine</title>
-</head>
-<body>
+  </head>
+  <body>
     <canvas id="canvas" width="800" height="600"></canvas>
     <!-- Game Engine -->
     <script src="game.js"></script>
@@ -15,8 +15,10 @@
     <script src="ball.js"></script>
     <script src="brick.js"></script>
     <script src="score.js"></script>
-    
+    <script src="lives.js"></script>
+    <script src="powerup.js"></script>
+    <script src="level.js"></script>
     <!-- Main Game Logic -->
     <script src="index.js"></script>
-</body>
+  </body>
 </html>
