--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="ball.js"></script>
     <script src="brick.js"></script>
     <script src="score.js"></script>
+    <script src="hero.js"></script>
     <script src="lives.js"></script>
     <script src="powerup.js"></script>
     <script src="level.js"></script>
