--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="game.js"></script>
     <!-- Sprite Classes -->
     <script src="background.js"></script>
+    <script src="startScreen.js"></script>
     <script src="paddle.js"></script>
     <script src="ball.js"></script>
     <script src="brick.js"></script>
@@ -19,7 +20,6 @@
     <script src="lives.js"></script>
     <script src="powerup.js"></script>
     <script src="level.js"></script>
-    <!-- Main Game Logic -->
     <script src="index.js"></script>
   </body>
 </html>
