added second animation

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="brick.js"></script>
     <script src="score.js"></script>
     <script src="hero.js"></script>
+    <script src="necromancer.js"></script>
     <script src="lives.js"></script>
     <script src="powerup.js"></script>
     <script src="level.js"></script>
