--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="lives.js"></script>
     <script src="powerup.js"></script>
     <script src="level.js"></script>
+    <script src="sound.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
